--- a/css/app.css
+++ b/css/app.css
@@ -107,9 +107,14 @@ h1 {
 .score-panel .restart {
     float: right;
     cursor: pointer;
-    padding-right: 0.6rem;
+    padding-right: 0.2rem;
 }
 
 #startReset {
     float: right;
+}
+
+#movesMade {
+    float: right;
+    padding-right: 0.2rem;
 }
