--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,11 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 body {
-    background: #ffffff url('../img/geometry2.png'); /* Background pattern from Subtle Patterns */
+    background: #ffffff url('../img/geometry2.png');/* Background pattern from Subtle Patterns */
     font-family: 'Coda', cursive;
 }
 
@@ -32,12 +32,15 @@ body {
 h1 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 600;
+    font-size: 2.2rem;
     color: #02b3e4;
+    padding: 0; 
 }
 
 h2 {
     font-weight: 400;
 }
+
 strong {
     color: linen;
 }
@@ -53,8 +56,8 @@ span {
  */
 
 .deck {
-    width: 794px;
-    min-height: 897px;
+    width: 41rem;
+    min-height: 16rem;
     background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
     padding: 44px;
     border-radius: 10px;
@@ -100,13 +103,13 @@ span {
  * Styles for the Score Panel
  */
 
- .stars {
+.stars {
     font-size: 2.2rem;
 }
 
 .restart {
-    font-size: 2rem;
-    padding: 1rem 0.1rem;
+    font-size: 1.2rem;
+    padding: 0.1rem 0.1rem;
     border-radius: 43rem;
 }
 
@@ -134,14 +137,22 @@ span {
     cursor: pointer;
 }
 
+.restart {
+    padding: 0;
+}
+
 #startReset {
     padding: 0;
 }
 
+#fullBody > section > div > i {
+    padding: 2.8rem 0.1rem 0 0;
+}
+
 #movesMade {
     float: right;
-    margin: 1rem;
-    padding-right: 0.2rem;
+    margin: 0.6rem;
+    padding: 2rem 0  0.1rem;
 }
 /*  modal styles  */
 .classModal {
@@ -150,30 +161,33 @@ span {
     z-index: 1;
     left: 0;
     top: 0;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     overflow: auto;
     background-color: rgba(3, 3, 3, 0.3);
 }
 
 .modalContent {
+    position: fixed;
+    top: 0%;
+    left: 15%;
     background-color: rgba(60, 62, 92, 0.8);
-    margin: 20% auto;
-    padding: 2rem 4rem;
-    width: 70%;
+    margin: 18% auto;
+    padding: 1.5rem 3rem;
+
 }
 
 .endGame {
     color: rgb(211, 197, 245);
     float: right;
-    font-size: 1.8rem;
+    font-size: 1.4rem;
 }
 
 .endGame:hover {
     color: rgba(30, 31, 32, 0.9);
     background-color: plum;
     float: right;
-    font-size: 2rem;
+    font-size: 1.4rem;
     cursor: pointer;
 }
 
