--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    font-size: 1rem;
 }
 
 body {
@@ -30,9 +29,10 @@ body {
 }
 
 h1 {
+    display: none;
     font-family: 'Open Sans', sans-serif;
     font-weight: 600;
-    font-size: 2.2rem;
+    font-size: 1.8rem;
     color: #02b3e4;
     padding: 0; 
 }
@@ -47,7 +47,7 @@ strong {
 
 span {
     color: #aa7ecd;
-    font-size: 1.4rem;
+    font-size: 1rem;
     padding: 0;
 }
 
@@ -56,22 +56,22 @@ span {
  */
 
 .deck {
-    width: 41rem;
-    min-height: 16rem;
+    width: 30rem;
+    min-height: 30rem;
     background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
-    padding: 44px;
+    padding: 1.2rem;
     border-radius: 10px;
     box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    margin: 0 0 3em;
+    margin: 0 0.2rem;
 }
 
 .deck .card {
-    height: 142px;
-    width: 142px;
+    height: 6rem;
+    width: 6rem;
     background: #2e3d49;
     font-size: 0;
     color: #ffffff;
@@ -104,26 +104,26 @@ span {
  */
 
 .stars {
-    font-size: 2.2rem;
+    font-size: 1rem;
 }
 
 .restart {
-    font-size: 1.2rem;
-    padding: 0.1rem 0.1rem;
+    font-size: 0.8rem;
+    padding: 2.1rem 0.1rem 0 0;
     border-radius: 43rem;
 }
 
 .score-panel {
     text-align: left;
     width: 40%;
-    margin-bottom: 1rem;
-    padding: 1rem;
+    margin-bottom: 0.8rem;
+    padding: 0.8rem;
 }
 
 .score-panel .stars {
-    padding: 0;
+    padding: 1rem 0 0 0;
     display: inline-block;
-    margin: 1.2rem 1rem 0 0;
+    margin: 1rem 0.8rem 0 0;
 }
 
 .score-panel .stars li {
@@ -137,22 +137,18 @@ span {
     cursor: pointer;
 }
 
-.restart {
-    padding: 0;
-}
-
 #startReset {
     padding: 0;
 }
 
 #fullBody > section > div > i {
-    padding: 2.8rem 0.1rem 0 0;
+    padding: 0.4rem 0.1rem 0 0;
 }
 
 #movesMade {
     float: right;
     margin: 0.6rem;
-    padding: 2rem 0  0.1rem;
+    padding: 1.6rem 0  0.1rem 0;
 }
 /*  modal styles  */
 .classModal {
